# dirtorch

./: CMakeLists.txt  main.cpp
src/data/: DirectoryEntity.cpp  DirectoryEntity.h  Entity.cpp  Entity.h  FileEntity.cpp  FileEntity.h  Layer.cpp  Layer.h
